--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,44 @@
 {
+    "cmake.configureOnOpen": true,
+    "cmake.buildDirectory": "${workspaceFolder}/build",
+    "cmake.generator": "Unix Makefiles",
+    "cmake.configureSettings": {
+        "CMAKE_CXX_STANDARD": 17,
+        "CMAKE_EXPORT_COMPILE_COMMANDS": true
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}",
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
         "*.css": "tailwindcss",
-        "filesystem": "cpp",
-        "iostream": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
+        "*.h": "cpp",
+        "*.tcc": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
-        "cctype": "cpp",
         "chrono": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
         "codecvt": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
         "condition_variable": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
         "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
         "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "string": "cpp",
         "unordered_map": "cpp",
+        "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
@@ -44,6 +57,7 @@
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
         "mutex": "cpp",
@@ -58,23 +72,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "csignal": "cpp",
-        "cstring": "cpp",
-        "any": "cpp",
-        "strstream": "cpp",
-        "bitset": "cpp",
-        "complex": "cpp",
-        "coroutine": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "optional": "cpp",
-        "source_location": "cpp",
-        "future": "cpp",
-        "cfenv": "cpp",
-        "typeindex": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp"
-    }
+        "valarray": "cpp"
+    },
+    "editor.formatOnSave": true,
+    "cmake.parallelJobs": 4
 }
