--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,9 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "filesystem": "cpp",
+        "queue": "cpp"
     },
     "editor.formatOnSave": true,
     "cmake.parallelJobs": 4
