--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GST REQUIRED gstreamer-1.0
     gstreamer-video-1.0)
 pkg_check_modules(JSONCPP REQUIRED jsoncpp)
+pkg_check_modules(WEBP REQUIRED libwebp libwebpdemux libwebpmux)
 
 find_package(CURL REQUIRED)
 find_package(OpenSSL REQUIRED)
@@ -28,6 +29,8 @@ find_library(PAHO_MQTT_CPP_LIB paho-mqttpp3)
 find_package(JPEG REQUIRED)
 find_package(PNG REQUIRED)
 
+# find_package(WebP REQUIRED)
+
 # 包含头文件
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
@@ -37,6 +40,7 @@ include_directories(
     ${JSONCPP_INCLUDE_DIRS}
     ${JPEG_INCLUDE_DIR}
     ${PNG_INCLUDE_DIR}
+    ${WEBP_INCLUDE_DIRS}
     /usr/include/mqtt # Paho MQTT C++ 头文件路径
 )
 
@@ -57,6 +61,7 @@ add_executable(eplayer
     src/ImageDecoder.cpp
     src/Framebuffer.cpp
     src/Tools.cpp
+    src/GstConcatPlayer.cpp
 )
 
 # link_directories(${GSTREAMER_LIBRARY_DIRS})
@@ -73,4 +78,5 @@ target_link_libraries(eplayer
     ${PAHO_MQTT_C_LIB}
     ${JPEG_LIBRARIES}
     ${PNG_LIBRARIES}
+    ${WEBP_LIBRARIES}
 )
