--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,8 @@ pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 # 通过 FetchContent 获取 MQTT 库（本地编译时直接拉取源码）
 include(FetchContent)
 
-set(ENV{http_proxy} "http://192.168.4.151:1087")
-set(ENV{https_proxy} "http://192.168.4.151:1087")
+#set(ENV{http_proxy} "http://192.168.4.151:1087")
+#set(ENV{https_proxy} "http://192.168.4.151:1087")
 
 # http
 FetchContent_Declare(
@@ -41,6 +41,9 @@ FetchContent_Declare(
     GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
     GIT_TAG v0.21.0 # 指定稳定版本
     CMAKE_ARGS -DBUILD_SHARED_LIBS=OFF
+
+    SOURCE_DIR ./build/_deps/cpp-httplib-src
+
 )
 
 # 添加https支持
@@ -53,6 +56,7 @@ FetchContent_Declare(
 
     GIT_REPOSITORY https://github.com/eclipse-paho/paho.mqtt.c.git
     GIT_TAG v1.3.10
+    SOURCE_DIR ./build/_deps/paho.mqtt.c-src
 )
 
 FetchContent_Declare(
@@ -60,6 +64,7 @@ FetchContent_Declare(
 
     GIT_REPOSITORY https://github.com/eclipse-paho/paho.mqtt.cpp.git
     GIT_TAG v1.2.0
+    SOURCE_DIR ./build/_deps/paho.mqtt.cpp-src
 )
 FetchContent_MakeAvailable(paho.mqtt.c paho.mqtt.cpp)
 
@@ -69,6 +74,7 @@ FetchContent_Declare(
 
     GIT_REPOSITORY https://github.com/nothings/stb.git
     GIT_TAG master
+    SOURCE_DIR ./build/_deps/std-src
 )
 FetchContent_MakeAvailable(std)
 
@@ -108,6 +114,7 @@ add_executable(eplayer
     src/Tools.cpp
     src/QrCodeGenerator.cpp
     src/TextRenderer.cpp
+    src/stb_init.cpp
 )
 
 # 链接库（混合静态/动态）
@@ -125,6 +132,7 @@ target_link_libraries(eplayer
     stdc++fs
 
     paho-mqttpp3 # MQTT 库
+    
     ${JSONCPP_LIBRARIES}
     ${QRENCODE_LIBRARIES}
 
