--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,51 @@
 {
-    "cmake.configureOnOpen": true,
-    "cmake.buildDirectory": "${workspaceFolder}/build",
-    "cmake.generator": "Unix Makefiles",
     "cmake.configureSettings": {
-        "CMAKE_CXX_STANDARD": 17,
-        "CMAKE_EXPORT_COMPILE_COMMANDS": true
+        "CMAKE_TOOLCHAIN_FILE": "/home/ubuntu/work/vcpkg/scripts/buildsystems/vcpkg.cmake"
     },
-    "cmake.sourceDirectory": "${workspaceFolder}",
+    "cmake.buildDirectory": "${workspaceFolder}/build",
+    "cmake.generator": "Ninja", // 比 Make 更快
+    "vcpkg.path": "/home/ubuntu/work/vcpkg",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+    "cmake.parallelJobs": 4,
     "files.associations": {
         "*.css": "tailwindcss",
         "*.h": "cpp",
         "*.tcc": "cpp",
+        "iostream": "cpp",
+        "any": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "strstream": "cpp",
+        "bit": "cpp",
+        "bitset": "cpp",
         "cctype": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
+        "codecvt": "cpp",
+        "compare": "cpp",
+        "complex": "cpp",
+        "concepts": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "csignal": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
+        "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "chrono": "cpp",
-        "codecvt": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
-        "cstdint": "cpp",
         "deque": "cpp",
         "forward_list": "cpp",
         "list": "cpp",
         "map": "cpp",
+        "set": "cpp",
         "string": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
@@ -46,18 +54,22 @@
         "memory": "cpp",
         "memory_resource": "cpp",
         "numeric": "cpp",
+        "optional": "cpp",
         "random": "cpp",
         "ratio": "cpp",
+        "regex": "cpp",
+        "source_location": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
+        "rope": "cpp",
         "fstream": "cpp",
+        "future": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
-        "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
         "mutex": "cpp",
@@ -65,30 +77,31 @@
         "numbers": "cpp",
         "ostream": "cpp",
         "semaphore": "cpp",
+        "shared_mutex": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
+        "cfenv": "cpp",
         "cinttypes": "cpp",
+        "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "filesystem": "cpp",
-        "queue": "cpp",
-        "bitset": "cpp",
-        "regex": "cpp",
-        "csignal": "cpp",
-        "any": "cpp",
-        "complex": "cpp",
-        "coroutine": "cpp",
-        "set": "cpp",
-        "unordered_set": "cpp",
-        "optional": "cpp",
-        "source_location": "cpp",
-        "future": "cpp",
-        "typeindex": "cpp",
         "variant": "cpp"
     },
-    "editor.formatOnSave": true,
-    "cmake.parallelJobs": 4
+    "cmake.configureOnOpen": true,
+    "cmake.configureArgs": [
+        "-DVCPKG_APPLOCAL_DEPS=ON",
+        "-DX_VCPKG_APPLOCAL_DEPS_INSTALL=ON",
+        "-DVCPKG_MANIFEST_MODE=ON",
+        "-DVCPKG_TARGET_TRIPLET="
+    ],
+    "vcpkg.general.enable": true,
+    "vcpkg.target.hostTriplet": "x64-linux",
+    "vcpkg.target.defaultTriplet": "",
+    "vcpkg.target.useStaticLib": false,
+    "vcpkg.target.installDependencies": true,
+    "vcpkg.target.preferSystemLibs": false,
+    "vcpkg.target.useManifest": false
 }
