--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,74 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "CMake 构建",
+            "label": "CMake Build",
             "type": "shell",
-            "command": "cmake -DCMAKE_BUILD_TYPE=Debug -B ${workspaceFolder}/build -S ${workspaceFolder} && make -C ${workspaceFolder}/build -j$(nproc)", //cmake -DCMAKE_BUILD_TYPE=Debug -B ${workspaceFolder}/build -S ${workspaceFolder} && make -C ${workspaceFolder}/build -j$(nproc)
+            "command": "cmake --build ${workspaceFolder}/build --config Debug -j $(nproc)",
             "group": "build",
-            "problemMatcher": []
-        },
-        {
-            "label": "cmake",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "-S",
-                "${workspaceFolder}",
-                "-B",
-                "${workspaceFolder}/build",
-                "-DCMAKE_BUILD_TYPE=Debug"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "build",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "${workspaceFolder}/build",
-                "--config",
-                "Debug",
-                "--parallel",
-                "4"
-            ],
-            "group": "build",
-            "problemMatcher": []
-        },
-        {
-            "label": "clean",
-            "type": "shell",
-            "command": "cmake",
-            "args": [
-                "--build",
-                "${workspaceFolder}/build",
-                "--target",
-                "clean"
-            ]
-        },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: aarch64-linux-gnu-g++ 生成活动文件",
-            "command": "/usr/bin/aarch64-linux-gnu-g++",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": "build",
-            "detail": "调试器生成的任务。"
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
+        },
+        {
+            "label": "Clean Build",
+            "type": "shell",
+            "command": "rm -rf ${workspaceFolder}/build && mkdir ${workspaceFolder}/build && cd ${workspaceFolder}/build && cmake ..",
+            "problemMatcher": []
         }
     ]
 }
